--- a/Kingdom-Conqueror/Kingdom-Conqueror/MainWindow.xaml
+++ b/Kingdom-Conqueror/Kingdom-Conqueror/MainWindow.xaml
@@ -24,11 +24,11 @@
     <Grid>
         <Image x:Name="Background" HorizontalAlignment="Left" VerticalAlignment="Top"  Stretch="UniformToFill">
             <Image.Source>
-                <BitmapImage UriSource="background-hills.png"/>
+                <BitmapImage UriSource="Plunder_Battle_Background.jpg"/>
             </Image.Source>
         </Image>
 
-        <Button x:Name="Archer" Click="Archer_Click" Style="{StaticResource ImageButtonStyle}" HorizontalAlignment="Left" Height="100" Margin="106,142,0,0" VerticalAlignment="Top" Width="100">
+        <Button x:Name="Archer" Click="Archer_Click" Style="{StaticResource ImageButtonStyle}" HorizontalAlignment="Left" Height="100" Margin="106,172,0,0" VerticalAlignment="Top" Width="100">
             <Image>
                 <Image.Source>
                     <BitmapImage UriSource="3.png"/>
@@ -36,7 +36,7 @@
             </Image>
         </Button>
 
-        <Button x:Name="Warrior" Click="Warrior_Click" Style="{StaticResource ImageButtonStyle}" HorizontalAlignment="Left" Height="100" Margin="243,153,0,0" VerticalAlignment="Top" Width="100" >
+        <Button x:Name="Warrior" Click="Warrior_Click" Style="{StaticResource ImageButtonStyle}" HorizontalAlignment="Left" Height="100" Margin="243,178,0,0" VerticalAlignment="Top" Width="100" >
             <Image>
                 <Image.Source>
                     <BitmapImage UriSource="2.png"/>
@@ -44,14 +44,14 @@
             </Image>
         </Button>
 
-        <Button x:Name="Wizard" Style="{StaticResource ImageButtonStyle}" HorizontalAlignment="Left" Height="100" Margin="384,134,0,0" VerticalAlignment="Top" Width="100" Click="Wizard_Click">
+        <Button x:Name="Wizard" Style="{StaticResource ImageButtonStyle}" HorizontalAlignment="Left" Height="100" Margin="384,174,0,0" VerticalAlignment="Top" Width="100" Click="Wizard_Click">
             <Image>
                 <Image.Source>
                     <BitmapImage UriSource="1.png"/>
                 </Image.Source>
             </Image>
         </Button>
-        <TextBox x:Name="Instructions" Background="#00000000" Text="Choose your hero." HorizontalAlignment="Center" Height="72" Margin="84,49,87,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="421" BorderThickness="0" SnapsToDevicePixels="True" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"/>
+        <TextBox x:Name="Instructions" Background="#00000000" Text="Choose your hero." HorizontalAlignment="Center" Height="72" Margin="81,95,90,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="421" BorderThickness="0" SnapsToDevicePixels="True" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"/>
 
     </Grid>
 </Window>
